--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,14 @@ body,
 }
 
 .nav {
-  display: none;
   position: absolute;
   z-index: 99;
-  top: 0;
-  left: 0;
+  top: 10px;
+  left: 10px;
+  color: #ffffff;
+}
+
+.nav a {
+  color: inherit;
+  text-decoration: none;
 }
